--- a/index.html
+++ b/index.html
@@ -160,8 +160,45 @@
         <div class="buttons-container d-flex flex-wrap justify-content-center align-items-center">
             <button class=" btn btn-primary m-2">Carrot 🥕</button>
         </div>
-        <button class="more-buttons btn btn-outline-success mx-auto d-block mt-3">More Buttons</button>
-        <button class="less-buttons d-none btn btn-success mx-auto d-block mt-3">Less Buttons</button>
+        <!-- <button class="more-buttons btn btn-outline-success mx-auto d-block mt-3">More Buttons</button>
+        <button class="less-buttons d-none btn btn-success mx-auto d-block mt-3">Less Buttons</button> -->
+
+        <button class="collapse btn btn-outline-success mx-auto mt-2 d-block" clicked="0" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</button>
+        <div class="collapse mx-auto w-75" id="multiCollapseExample1">
+            <div class="all-btns-container card card-body flex-row flex-wrap justify-content-center">
+                <button class="btn btn-primary m-2">Carrot 🥕</button>
+                <button class="btn btn-primary m-2">Broccoli 🥦</button>
+                <button class="btn btn-primary m-2">Asparagus 🥬</button>
+                <button class="btn btn-primary m-2">Cauliflower 🥦</button>
+                <button class="btn btn-primary m-2">Corn 🌽</button>
+                <button class="btn btn-primary m-2">Cucumber 🥒</button>
+                <button class="btn btn-primary m-2">Green Pepper 🫑</button>
+                <button class="btn btn-primary m-2">Lettuce 🥬</button>
+                <button class="btn btn-primary m-2">Mushrooms 🍄</button>
+                <button class="btn btn-primary m-2">Onion 🧅</button>
+                <button class="btn btn-primary m-2">Potato 🥔</button>
+                <button class="btn btn-primary m-2">Pumpkin 🎃</button>
+                <button class="btn btn-primary m-2">Red Pepper 🌶️</button>
+                <button class="btn btn-primary m-2">Tomato 🍅</button>
+                <button class="btn btn-primary m-2">Beetroot 🥕</button>
+                <button class="btn btn-primary m-2">Brussel Sprouts 🥦</button>
+                <button class="btn btn-primary m-2">Peas 🥬</button>
+                <button class="btn btn-primary m-2">Zucchini 🥒</button>
+                <button class="btn btn-primary m-2">Radish 🥕</button>
+                <button class="btn btn-primary m-2">Sweet Potato 🍠</button>
+                <button class="btn btn-primary m-2">Artichoke 🥬</button>
+                <button class="btn btn-primary m-2">Leek 🥬</button>
+                <button class="btn btn-primary m-2">Cabbage 🥬</button>
+                <button class="btn btn-primary m-2">Celery 🥬</button>
+                <button class="btn btn-primary m-2">Chili 🌶️</button>
+                <button class="btn btn-primary m-2">Garlic 🧄</button>
+                <button class="btn btn-primary m-2">Basil 🌿</button>
+                <button class="btn btn-primary m-2">Coriander 🌿</button>
+            </div>
+          </div>
+      
+
+
         <div class="elbaba d-flex justify-content-evenly">
             <div class="left-btns d-flex flex-column start-0 top-50 my-5 d-none">
                 <button class="btn btn-primary m-2">Carrot 🥕</button>
