Footer Responsive Fixed

--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@
     </div>
 
     </main>
-    <footer class="d-flex justify-content-evenly align-items-center">
-        <div class="w-25">
+    <footer class="d-flex justify-content-evenly align-items-center flex-xl-row flex-column">
+        <div class="w-50">
             <div class="container position-relative">
                 <input type="email" class="form-control" name="subscription email" id="" placeholder="Enter your E-mail to Subscribe">
                 <button class="btn btn-success position-absolute top-0 end-0">Subscribe</button>
