--- a/index.html
+++ b/index.html
@@ -196,180 +196,12 @@
                 <button class="btn btn-primary m-2">Coriander 🌿</button>
             </div>
           </div>
-        <h3 class="current-search w-fit-content mx-auto text-center mt-2">Carrot 🥕</h3>
+        <h3 class="current-search w-fit-content mx-auto text-center mt-2">.........</h3>
 
 
         <div class="elbaba d-flex justify-content-evenly">
             <div class="container mx-0">
             <div class="row cards gy-4 mb-5 mt-1">
-                <div class="col-lg-3  mt-1  col-md-4 col-12">
-                    <div class="cardo position-relative hov overflow-hidden">
-                        <div class="image-container w-100 h-100 overflow-hidden">
-                            <img src="images/post-1.jpg" class="w-100 h-100 " alt="">
-                        </div>
-                        <div class="text-container position-absolute bg-light bg-opacity-75 h-100 w-100 d-flex flex-column">
-                            <h5 class=" text-capitalize text-center mt-2 flex-grow-1 d-flex align-items-center justify-content-center">title</h5>
-                            <div class="publisher-receipe-container w-100 position-absolute bottom-0 start-0 mb-2 d-flex align-items-center justify-content-around">
-                                <div class="publisher text-center mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <h5 class="h6 w-fit-content">-- Publisher --</h5>
-                                    <a href="k" class="h6 text-capitalize">Publisher name</a>
-                                </div>
-                                <button class="btn btn-outline-danger fullReceipe">Full Recipe</button>
-                            </div>
-                        </div>
-                        <div class="h-100 d-flex flex-column justify-content-center full-receipe position-absolute top-0 d-none">
-                                <div class="ingredients-btn-container py-2 px-3 ">
-                                    <ul class="mb-2">
-                                        <li>
-                                            4 1/2 cups (20.25 ounces) unbleached high-gluten, bread, or all-purpose flour, chilled
-                                        </li>
-                                        <li>
-                                            1 3/4 (.44 ounce) teaspoons salt
-                                        </li>
-                                        <li>
-                                            1 teaspoon (.11 ounce) instant yeast
-                                        </li>
-                                        <li>
-                                            1/4 cup (2 ounces) olive oil (optional)
-                                        </li>
-                                        <li>
-                                            1 3/4 cups (14 ounces) water, ice cold (40F)
-                                        </li>
-                                        <li>
-                                            Semolina flour OR cornmeal for dusting
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-outline-info ms-auto d-block">close</button>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3  mt-1 col-md-4 col-12">
-                    <div class="cardo position-relative hov overflow-hidden">
-                        <div class="image-container w-100 h-100 overflow-hidden">
-                            <img src="images/post-1.jpg" class="w-100 h-100 " alt="">
-                        </div>
-                        <div class="text-container position-absolute bg-light bg-opacity-75 h-100 w-100 d-flex flex-column">
-                            <h5 class=" text-capitalize text-center mt-2 flex-grow-1 d-flex align-items-center justify-content-center">title</h5>
-                            <div class="publisher-receipe-container w-100 position-absolute bottom-0 start-0 mb-2 d-flex align-items-center justify-content-around">
-                                <div class="publisher text-center mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <h5 class="h6 w-fit-content">-- Publisher --</h5>
-                                    <a href="k" class="h6 text-capitalize">Publisher name</a>
-                                </div>
-                                <button class="btn btn-outline-danger fullReceipe">Full Recipe</button>
-                            </div>
-                        </div>
-                        <div class="h-100 d-flex flex-column justify-content-center full-receipe position-absolute top-0 d-none">
-                                <div class="ingredients-btn-container py-2 px-3 ">
-                                    <ul class="mb-2">
-                                        <li>
-                                            4 1/2 cups (20.25 ounces) unbleached high-gluten, bread, or all-purpose flour, chilled
-                                        </li>
-                                        <li>
-                                            1 3/4 (.44 ounce) teaspoons salt
-                                        </li>
-                                        <li>
-                                            1 teaspoon (.11 ounce) instant yeast
-                                        </li>
-                                        <li>
-                                            1/4 cup (2 ounces) olive oil (optional)
-                                        </li>
-                                        <li>
-                                            1 3/4 cups (14 ounces) water, ice cold (40F)
-                                        </li>
-                                        <li>
-                                            Semolina flour OR cornmeal for dusting
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-outline-info ms-auto d-block">close</button>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mt-1  col-md-4 col-12">
-                    <div class="cardo position-relative hov overflow-hidden">
-                        <div class="image-container w-100 h-100 overflow-hidden">
-                            <img src="images/post-1.jpg" class="w-100 h-100 " alt="">
-                        </div>
-                        <div class="text-container position-absolute bg-light bg-opacity-75 h-100 w-100 d-flex flex-column">
-                            <h5 class=" text-capitalize text-center mt-2 flex-grow-1 d-flex align-items-center justify-content-center">title</h5>
-                            <div class="publisher-receipe-container w-100 position-absolute bottom-0 start-0 mb-2 d-flex align-items-center justify-content-around">
-                                <div class="publisher text-center mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <h5 class="h6 w-fit-content">-- Publisher --</h5>
-                                    <a href="k" class="h6 text-capitalize">Publisher name</a>
-                                </div>
-                                <button class="btn btn-outline-danger fullReceipe">Full Recipe</button>
-                            </div>
-                        </div>
-                        <div class="h-100 d-flex flex-column justify-content-center full-receipe position-absolute top-0 d-none">
-                                <div class="ingredients-btn-container py-2 px-3 ">
-                                    <ul class="mb-2">
-                                        <li>
-                                            4 1/2 cups (20.25 ounces) unbleached high-gluten, bread, or all-purpose flour, chilled
-                                        </li>
-                                        <li>
-                                            1 3/4 (.44 ounce) teaspoons salt
-                                        </li>
-                                        <li>
-                                            1 teaspoon (.11 ounce) instant yeast
-                                        </li>
-                                        <li>
-                                            1/4 cup (2 ounces) olive oil (optional)
-                                        </li>
-                                        <li>
-                                            1 3/4 cups (14 ounces) water, ice cold (40F)
-                                        </li>
-                                        <li>
-                                            Semolina flour OR cornmeal for dusting
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-outline-info ms-auto d-block">close</button>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mt-1  col-md-4 col-12">
-                    <div class="cardo position-relative hov overflow-hidden">
-                        <div class="image-container w-100 h-100 overflow-hidden">
-                            <img src="images/post-1.jpg" class="w-100 h-100 " alt="">
-                        </div>
-                        <div class="text-container position-absolute bg-light bg-opacity-75 h-100 w-100 d-flex flex-column">
-                            <h5 class=" text-capitalize text-center mt-2 flex-grow-1 d-flex align-items-center justify-content-center">title</h5>
-                            <div class="publisher-receipe-container w-100 position-absolute bottom-0 start-0 mb-2 d-flex align-items-center justify-content-around">
-                                <div class="publisher text-center mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <h5 class="h6 w-fit-content">-- Publisher --</h5>
-                                    <a href="k" class="h6 text-capitalize">Publisher name</a>
-                                </div>
-                                <button class="btn btn-outline-danger fullReceipe">Full Recipe</button>
-                            </div>
-                        </div>
-                        <div class="h-100 d-flex flex-column justify-content-center full-receipe position-absolute top-0 d-none">
-                                <div class="ingredients-btn-container py-2 px-3 ">
-                                    <ul class="mb-2">
-                                        <li>
-                                            4 1/2 cups (20.25 ounces) unbleached high-gluten, bread, or all-purpose flour, chilled
-                                        </li>
-                                        <li>
-                                            1 3/4 (.44 ounce) teaspoons salt
-                                        </li>
-                                        <li>
-                                            1 teaspoon (.11 ounce) instant yeast
-                                        </li>
-                                        <li>
-                                            1/4 cup (2 ounces) olive oil (optional)
-                                        </li>
-                                        <li>
-                                            1 3/4 cups (14 ounces) water, ice cold (40F)
-                                        </li>
-                                        <li>
-                                            Semolina flour OR cornmeal for dusting
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-outline-info ms-auto d-block">close</button>
-                                </div>
-                        </div>
-                    </div>
-                </div>
             </div>
             </div>
     </div>
