--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="row h-100 position-relative">
                         <div class=" offset-lg-1 offset-3 col-lg-10 col-6 d-flex justify-content-center align-items-center flex-column">
                             <div class="img-container w-100 rounded-3 mt-5 d-flex justify-content-center align-items-center">
-                                <img src="http://forkify-api.herokuapp.com/images/fruitpizza9a19.jpg" alt="" class="w-100 rounded-4 object-fit-cover ">
+                                <img src="http://forkify-api.herokuapp.com/images/fruitpizza9a19.jpg" alt="" class=" rounded-4 object-fit-cover ">
                             </div>
                             <h3 class="text-center my-4 ">Title</h3>
                         </div>
@@ -259,7 +259,7 @@
                                 <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
                                 <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
                                 <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
-                              </ul>
+                            </ul>
                         </div>
                     </div>
                     
