modal dimensions is modified as requsted by me

--- a/index.html
+++ b/index.html
@@ -241,25 +241,27 @@
                 </div>
                 <div class="col-lg-6 col-12">
                     <div class="row h-100 position-relative">
-                        <div class=" col-10 d-flex justify-content-center align-items-center flex-column">
-                            <h2 class="text-start w-100 mb-4" >Ingredients :</h2>
-                            <ul class="list-group w-100 overflow-y-auto overflow-x-hidden">
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple default list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple primary list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple secondary list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple success list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple danger list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple warning list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple info list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple light list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
-                                <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
-                            </ul>
+                        <div class=" col-10">
+                            <div class="ingredients mt-5 p-1">
+                                <h2 class="text-start w-100 mb-3 mt-4" >Ingredients :</h2>
+                            </div>
+                                <ul class="list-group w-100 overflow-y-auto overflow-x-hidden">
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple default list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple primary list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple secondary list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple success list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple danger list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple warning list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple info list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple light list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
+                                    <li href="#" class="list-group-item list-group-item-action list-group-item-light">A simple dark list group item</li>
+                                </ul>
                         </div>
                     </div>
                     
